completed snapshot and uno pages, removed darwin page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Gvidas Danielius - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -60,12 +60,12 @@
                     <p>Engine programming, including physics, AI, networking and state-machines</p>
                 </a>
 
-                <a class="game todo" href="pages/darwin.html">
-                    <img src="images/darwin.png">
-                    <p>Python</p>
-                    <h1>Evolutionary Algorithm</h1>
-                    <p>Developed an algorithm to generate a target image out of polygons.</p>
-                </a>
+<!--                <a class="game todo" href="pages/darwin.html">-->
+<!--                    <img src="images/darwin.png">-->
+<!--                    <p>Python</p>-->
+<!--                    <h1>Evolutionary Algorithm</h1>-->
+<!--                    <p>Developed an algorithm to generate a target image out of polygons.</p>-->
+<!--                </a>-->
 
 <!--                <a class="game" href="pages/teamproject.html">-->
 <!--                    <img src="images/teamproject.png">-->
@@ -85,7 +85,7 @@
                     <p>Procedural Dungeons and Inventory System</p>
                 </a>
 
-                <a class="game todo" href="pages/snapshot.html">
+                <a class="game" href="pages/snapshot.html">
                     <img src="images/snapshot.png">
 
                     <p>Godot</p>
@@ -93,12 +93,12 @@
                     <p>3-person personal team project for a game jam.</p>
                 </a>
 
-                <a class="game todo" href="pages/uno.html">
+                <a class="game" href="pages/uno.html">
                     <img src="images/uno.png">
 
                     <p>Python</p>
-                    <h1>Networked UNO Clone </h1>
-                    <p>Created a four player uno game able to be
+                    <h1>Multiplayer Card Game </h1>
+                    <p>Implemented a four player card game able to be
                     played across a network using pygame and sockets</p>
                 </a>
 
