--- a/pages/snapshot.html
+++ b/pages/snapshot.html
@@ -18,10 +18,28 @@
     <div class="page-container">
         <div class="text-column">
             <h2>Snapshot</h2>
-            <p>
-                This game was made in a team of three people for the
-                <a href="https://itch.io/jam/game-dev-winter-jam-25"> NUGDS Winter Jam 2025 </a>
+            <br>
+            <p>I organised a <a href="https://itch.io/jam/game-dev-winter-jam-25"> game jam</a> for my MSc peers and myself during some downtime before an upcoming team project, which I entered
+            with a team of three. We developed a first-person puzzle game built around a unique 'camera flash' mechanic.</p>
+            
+            <hr>
+            <h3>Key Features</h3>
+            <p>The game was developed in Godot to learn the engine, as none of the team had used it previously.</p>
+            <ul>
+                <li>
+                    Beyond organising the jam itself, I led the development for the team. I was responsible for defining scope and delegating tasks
+                </li>
                 <br>
+                <li>
+                    I designed and built the game's level, with my focus on creating a strong atmosphere. Added ambient sound, particle effects and lighting.
+                </li>
+                <br>
+                <li>
+                    I also programmed the camera and its flash mechanic, creating a flash that persists after the snapshot is taken. 
+                </li>
+            </ul>
+            <hr>
+            <p>
                 The itch.io page can be found  <a href="https://dani-gvid.itch.io/snapshot">here</a> with a working build of the game
             </p>
 
